--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1467,12 +1467,7 @@ node_types:
     interfaces:
       Standard:
         start:
-          implementation: |
-            ---
-            - hosts: localhost
-              connection: local
-              roles:
-                - role: indigo-dc.ams_config
+          implementation: 'https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/ams_master_config.yml'
           inputs:
             mesos_masters_list: { get_property: [ SELF, master_ips ] }
             consul_servers: { get_property: [ SELF, master_ips ] }
@@ -1551,13 +1546,7 @@ node_types:
     interfaces:
       Standard:
         start:
-          implementation: |
-            ---
-            - hosts: localhost
-              connection: local
-              roles:
-                - role: indigo-dc.ams_config
-                  ams_config_node: "wn"
+          implementation: 'https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/ams_wn_config.yml'
           inputs:
             mesos_masters_list: { get_property: [ SELF, master_ips ] }
             consul_servers: { get_property: [ SELF, master_ips ] }
