Add kube_api_server value

--- a/artifacts/lrms/kubernetes/kube_wn_install.yml
+++ b/artifacts/lrms/kubernetes/kube_wn_install.yml
@@ -17,3 +17,4 @@
   - role: 'grycap.kubernetes'
     kube_type_of_node: 'wn'
     kube_server: '{{kube_front_end_ip}}'
+    kube_api_server: '{{ kube_front_end_ip }}'
