--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1308,14 +1308,11 @@ node_types:
     derived_from: tosca.nodes.SoftwareComponent
     properties:
       grafana_security:
-          admin_user: 
-            type: string 
-            required: no 
-            default: admin
-          admin_password: 
-            type: string 
-            required: no 
-            default: admin
+          type: map 
+          required: no 
+          default: 
+            - admin_user: admin
+            - admin_password: admin
     artifacts:
       prom_config_role:
         file: cloudalchemy.grafana
