--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1431,19 +1431,7 @@ node_types:
       cms_stageoutsite:
         type: string
         required: yes
-      cms_stageoutserver:
-        type: string
-        required: yes
-      cms_stageoutprefix:
-        type: string
-        required: yes
-      cms_stageoutsite_fallback:
-        type: string
-        required: yes
-      cms_stageoutserver_fallback:
-        type: string
-        required: yes
-      cms_stageoutprefix_fallback:
+      cms_stageoutprotocol:
         type: string
         required: yes
       cms_input_path:
@@ -1477,11 +1465,7 @@ node_types:
             cms_config_proxycache_host: { get_property: [ SELF, proxycache_host ] }
             cms_config_cms_local_site: { get_property: [ SELF, cms_local_site ] }
             cms_config_stageoutsite: { get_property: [ SELF, cms_stageoutsite ] }
-            cms_config_stageoutserver: { get_property: [ SELF, cms_stageoutserver ] }
-            cms_config_stageoutprefix: { get_property: [ SELF, cms_stageoutprefix ] }
-            cms_config_stageoutsite_fallback: { get_property: [ SELF, cms_stageoutsite_fallback ] }
-            cms_config_stageoutserver_fallback: { get_property: [ SELF, cms_stageoutserver_fallback ] }
-            cms_config_stageoutprefix_fallback: { get_property: [ SELF, cms_stageoutprefix_fallback ] }
+            cms_config_stageoutprotocol: { get_property: [ SELF, cms_stageoutprotocol ] }
             cms_input_path: { get_property: [ SELF, cms_input_path ] }
             cms_input_protocol: { get_property: [ SELF, cms_input_protocol ] }
             cms_config_elastic_secret: { get_property: [ SELF, elasticsearch_secret ] }
