add variable input protocol to cms services

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1300,6 +1300,10 @@ node_types:
         type: string
         required: no
         default: "cloudpg/ttscache"
+      cms_input_protocol:
+        type: string
+        required: no
+        default: 'xrootd'
       mysquid_host:
         type: string
         required: yes
