add version for compatibility of newer galaxy versions

--- a/artifacts/galaxy/galaxy_tools_configure.yml
+++ b/artifacts/galaxy/galaxy_tools_configure.yml
@@ -2,5 +2,5 @@
 - hosts: localhost
   connection: local
   roles:
-    - { role: indigo-dc.galaxycloud-tools, when: galaxy_flavor != 'galaxy-no-tools' }
+    - { role: indigo-dc.galaxycloud-tools, GALAXY_VERSION: '{{ galaxy_version }}', when: galaxy_flavor != 'galaxy-no-tools' }
     - { role: indigo-dc.galaxycloud-tooldeps, galaxy_instance_url: 'http://{{ instance_public_ip }}/galaxy/', GALAXY_VERSION: '{{ galaxy_version }}' }
